Fix Interest section text readability in dark mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -100,10 +100,10 @@ p {
     list-style-type: square;
     color: #475569;
   }
-  
-  .dark .ul-interests li {
-    color: #cbd5e1;
-  }
+}
+
+.dark .wg-about .ul-interests li {
+  color: #cbd5e1;
 }
 
 // Hero Tagline Styling
